version 20080418_1
Added the ability to have a search box at the top of your page.  It
can be enabled via the "advanced options -> more advanced" tab.  Also,
added some page creation options to allow for easily adding the search
boxes as part of the page creation process.

version 20080416_1
Added the ability to create one way links easily

version 20080401_3
A link search will now show page *name* matches as well as "content"

version 20080401_2
Very small change to make selenium write log files.

version 20080401_1
Added the Selenium tests for the functionality I added yesterday.

version 20080331_2
Fixed a bug I introduced in the last version, but more importantly
I added the ability to create related pages super quickly.

version 20080331_1
Moved the file read and write functionality into a separate module
and added width and height options for the text area, which you can
speficy in the URL: nm_textarea_cols=100&nm_textarea_rows=30

version 20080224_1
Added a client-side check to make sure that pages with encryption
buttons are actually encrypted prior to being sent to the server.

version 20071111_3
Added POT_RPC.pm and pot_add.cgi to the utils directory.  They are
the beginnings of useful remote procedure scripts.

version 20071111_2
Small tweak to make sure that old PH_page_links RSS feeds still work.

version 20071111_1
Made it so you can get either just the changes, or the changes
and the full text in your RSS feeds.

version 20071109_1
Made the search input get automatically selected in the Links
search page.

version 20070926_2
Updated the tests to reflect the fact that the one of the creation
pages has been removed.

version 20070926_1
Updated the "find" page so that it is programmatic, but you can
still ask the site administrator if you're still unable to find
the page.

version 20070924_1
Removed one of the creation pages, so it goes directly to the page
after creating it.

version 20070921_1
Properly escape single quotes in the diff rollovers in the